tests/baselines/reference/destructuringFromUnionSpread(strict=true).errors.txt
destructuringFromUnionSpread.ts(5,9): error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
destructuringFromUnionSpread.ts(5,9): error TS7031: Binding element 'a' implicitly has an 'any' type.


==== destructuringFromUnionSpread.ts (2 errors) ====
    interface A { a: string }
    interface B { b: number }
    
    declare const x: A | B;
    const { a } = { ...x } // error
            ~
!!! error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
    